--- a/flutter_040_naver_api/android/app/src/main/AndroidManifest.xml
+++ b/flutter_040_naver_api/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flutter_040_naver_api">
+    package="com.han.naver">
    <application
-        android:label="flutter_040_naver_api"
+        android:label="flutter_naver"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
