--- a/flutter_040_naver_api/android/app/src/main/AndroidManifest.xml
+++ b/flutter_040_naver_api/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.han.naver">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+
    <application
         android:label="flutter_naver"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        >
         <activity
             android:name=".MainActivity"
             android:exported="true"
