--- a/flutter_040_naver_api/android/app/src/main/AndroidManifest.xml
+++ b/flutter_040_naver_api/android/app/src/main/AndroidManifest.xml
@@ -2,11 +2,18 @@
     package="com.han.naver">
 
     <uses-permission android:name="android.permission.INTERNET"/>
-
+    <queries> 
+        <intent> 
+            <action android:name = "android.intent.action.VIEW"/> 
+            <data android:scheme = "https" />
+        </intent> 
+    </queries>
+    
    <application
         android:label="flutter_naver"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
+        android:usesCleartextTraffic = "true"
         >
         <activity
             android:name=".MainActivity"
